--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
+title: NicetomEetU
+subtitle: 我变秃了，也变强了~
+description: 我变秃了，也变强了~
 keywords:
-author: John Doe
+author: 东北什么大学
 language:
 timezone:
 
